ul in sections fixed

--- a/index.html
+++ b/index.html
@@ -71,16 +71,14 @@
    <section class="services">
        <h2 class="services-heading">our services</h2>
        <div class="services-info">
-           <nav class="services-nav">
-               <ul class="services-list">
-                   <li class="services-nav-item"><button class="services-nav-btn">web design</button></li>
-                   <li class="services-nav-item"><button class="services-nav-btn">graphic design</button></li>
-                   <li class="services-nav-item"><button class="services-nav-btn">online support</button></li>
-                   <li class="services-nav-item"><button class="services-nav-btn">app design</button></li>
-                   <li class="services-nav-item"><button class="services-nav-btn">online marketing</button></li>
-                   <li class="services-nav-item"><button class="services-nav-btn">seo service</button></li>
-               </ul>
-           </nav>
+            <ul class="services-list">
+               <li class="services-nav-item">web design</li>
+               <li class="services-nav-item">graphic design</li>
+               <li class="services-nav-item">online support</li>
+               <li class="services-nav-item">app design</li>
+               <li class="services-nav-item">online marketing</li>
+               <li class="services-nav-item">seo service</li>
+           </ul>
            <div class="service-info">
                <div class="service-img-frame">
                    <img src="images/web-design-image.png" alt="service-image" class="service-img">
@@ -95,15 +93,13 @@
        <button class="purchase-btn">purchase now</button>
    </div>
    <section class="work">
-       <nav class="work-nav">
-           <ul class="work-nav-list">
-               <li class="work-nav-item"><button class="work-nav-btn">all</button></li>
-               <li class="work-nav-item"><button class="work-nav-btn">graphic design</button></li>
-               <li class="work-nav-item"><button class="work-nav-btn">web design</button></li>
-               <li class="work-nav-item"><button class="work-nav-btn">landing pages</button></li>
-               <li class="work-nav-item"><button class="work-nav-btn">wordpress</button></li>
-           </ul>
-       </nav>
+        <ul class="work-nav-list">
+            <li class="work-nav-item">all</li>
+            <li class="work-nav-item">graphic design</li>
+            <li class="work-nav-item">web design</li>
+            <li class="work-nav-item">landing pages</li>
+            <li class="work-nav-item">wordpress</li>
+        </ul>
        <div class="work-images">
             <div class="work-item">
                 <img src="images/work-image1.png" alt="work-image" class="work-img">
