--- a/index.html
+++ b/index.html
@@ -4,32 +4,37 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <title>HAM</title>
 </head>
 <body>
    <header class="header">
-       <div class="logo">
-           <a href="#" class="logo-link">
-               <div class="h-wrap">
-                   <span class="h-letter">H</span>
-               </div>
-               <h1 class="logo-text">the<span class="logo-name green-text">Ham</span></h1>
-           </a>
-       </div>
-       <nav class="nav">
-           <ul class="nav-list">
-               <li class="nav-item"><a href="#" class="nav-item-link">home</a></li>
-               <li class="nav-item"><a href="#" class="nav-item-link">about</a></li>
-               <li class="nav-item"><a href="#" class="nav-item-link">blog</a></li>
-               <li class="nav-item"><a href="#" class="nav-item-link">skills</a></li>
-               <li class="nav-item"><a href="#" class="nav-item-link">service</a></li>
-               <li class="nav-item"><a href="#" class="nav-item-link">work</a></li>
-               <li class="nav-item"><a href="#" class="nav-item-link">testimonial</a></li>
-           </ul>
-       </nav>
-       <div class="header-search">
-           <img src="images/search-icon.png" alt="search" class="header-search-icon">
-       </div>
+       <div class="container">
+            <div class="logo">
+                <a href="#" class="logo-link">
+                    <div class="h-wrap">
+                        <span class="h-letter">H</span>
+                    </div>
+                    <h1 class="logo-text">the<span class="logo-name green-text">Ham</span></h1>
+                </a>
+            </div>
+            <div class="header-right">
+                <nav class="nav">
+                    <ul class="nav-list">
+                        <li class="nav-item"><a href="#" class="nav-item-link">home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-item-link">about</a></li>
+                        <li class="nav-item"><a href="#" class="nav-item-link">blog</a></li>
+                        <li class="nav-item"><a href="#" class="nav-item-link">skills</a></li>
+                        <li class="nav-item"><a href="#" class="nav-item-link">service</a></li>
+                        <li class="nav-item"><a href="#" class="nav-item-link">work</a></li>
+                        <li class="nav-item"><a href="#" class="nav-item-link">testimonial</a></li>
+                    </ul>
+                </nav>
+                <div class="header-search">
+                    <img src="images/search-icon.png" alt="search" class="header-search-icon">
+                </div>
+            </div>
+       </div>       
    </header>
    <div class="banner">
        <div class="banner-info">
