reviews section is done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="slick-1.8.1/slick/slick.css">
     <title>HAM</title>
 </head>
 <body>
@@ -385,118 +386,134 @@
     </section>
     <section class="news container">
        <h2 class="news-heading">breaking news</h2>
-       <div class="news-items">
-           <article class="news-article">
-               <div class="article-date">
-                   <p class="article-day">12</p>
-                   <p class="article-month">Feb</p>
-               </div>
-               <div class="article-img-frame">
-                   <img src="images/article-img1.png" alt="article-image" class="article-img">
-               </div>
-               <h3 class="article-heading">Amazing Blog Post</h3>
-               <div class="article-info">
-                   <p class="article-author">by admin</p>
-                   <p class="article-comments">2 comment</p>
-               </div>
-           </article>
-           <article class="news-article">
-                <div class="article-date">
-                    <p class="article-day">12</p>
-                    <p class="article-month">Feb</p>
-                </div>
-                <div class="article-img-frame">
-                    <img src="images/article-img2.png" alt="article-image" class="article-img">
-                </div>
-                <h3 class="article-heading">Amazing Blog Post</h3>
-                <div class="article-info">
-                    <p class="article-author">by admin</p>
-                    <p class="article-comments">2 comment</p>
-                </div>
+        <div class="news-items">
+            <article class="news-article">
+                <a href="#" class="news-article-link">
+                    <div class="article-date">
+                        <p class="article-day">12</p>
+                        <p class="article-month">Feb</p>
+                    </div>
+                    <div class="article-img-frame">
+                        <img src="images/article-img1.png" alt="article-image" class="article-img">
+                    </div>
+                    <h3 class="article-heading">Amazing Blog Post</h3>
+                    <div class="article-info">
+                        <p class="article-author">by admin</p>
+                        <p class="article-comments">2 comment</p>
+                    </div>
+                </a>
             </article>
             <article class="news-article">
-                <div class="article-date">
-                    <p class="article-day">12</p>
-                    <p class="article-month">Feb</p>
-                </div>
-                <div class="article-img-frame">
-                    <img src="images/article-img3.png" alt="article-image" class="article-img">
-                </div>
-                <h3 class="article-heading">Amazing Blog Post</h3>
-                <div class="article-info">
-                    <p class="article-author">by admin</p>
-                    <p class="article-comments">2 comment</p>
-                </div>
+                <a href="#" class="news-article-link">
+                    <div class="article-date">
+                        <p class="article-day">12</p>
+                        <p class="article-month">Feb</p>
+                    </div>
+                    <div class="article-img-frame">
+                        <img src="images/article-img2.png" alt="article-image" class="article-img">
+                    </div>
+                    <h3 class="article-heading">Amazing Blog Post</h3>
+                    <div class="article-info">
+                        <p class="article-author">by admin</p>
+                        <p class="article-comments">2 comment</p>
+                    </div>
+                </a>
             </article>
             <article class="news-article">
-                <div class="article-date">
-                    <p class="article-day">12</p>
-                    <p class="article-month">Feb</p>
-                </div>
-                <div class="article-img-frame">
-                    <img src="images/article-img4.png" alt="article-image" class="article-img">
-                </div>
-                <h3 class="article-heading">Amazing Blog Post</h3>
-                <div class="article-info">
-                    <p class="article-author">by admin</p>
-                    <p class="article-comments">2 comment</p>
-                </div>
+                <a href="#" class="news-article-link">
+                    <div class="article-date">
+                        <p class="article-day">12</p>
+                        <p class="article-month">Feb</p>
+                    </div>
+                    <div class="article-img-frame">
+                        <img src="images/article-img3.png" alt="article-image" class="article-img">
+                    </div>
+                    <h3 class="article-heading">Amazing Blog Post</h3>
+                    <div class="article-info">
+                        <p class="article-author">by admin</p>
+                        <p class="article-comments">2 comment</p>
+                    </div>
+                </a>
             </article>
             <article class="news-article">
-                <div class="article-date">
-                    <p class="article-day">12</p>
-                    <p class="article-month">Feb</p>
-                </div>
-                <div class="article-img-frame">
-                    <img src="images/article-img5.png" alt="article-image" class="article-img">
-                </div>
-                <h3 class="article-heading">Amazing Blog Post</h3>
-                <div class="article-info">
-                    <p class="article-author">by admin</p>
-                    <p class="article-comments">2 comment</p>
-                </div>
+                <a href="#" class="news-article-link">
+                    <div class="article-date">
+                        <p class="article-day">12</p>
+                        <p class="article-month">Feb</p>
+                    </div>
+                    <div class="article-img-frame">
+                        <img src="images/article-img4.png" alt="article-image" class="article-img">
+                    </div>
+                    <h3 class="article-heading">Amazing Blog Post</h3>
+                    <div class="article-info">
+                        <p class="article-author">by admin</p>
+                        <p class="article-comments">2 comment</p>
+                    </div>
+                </a>
             </article>
             <article class="news-article">
-                <div class="article-date">
-                    <p class="article-day">12</p>
-                    <p class="article-month">Feb</p>
-                </div>
-                <div class="article-img-frame">
-                    <img src="images/article-img6.png" alt="article-image" class="article-img">
-                </div>
-                <h3 class="article-heading">Amazing Blog Post</h3>
-                <div class="article-info">
-                    <p class="article-author">by admin</p>
-                    <p class="article-comments">2 comment</p>
-                </div>
+                <a href="#" class="news-article-link">
+                    <div class="article-date">
+                        <p class="article-day">12</p>
+                        <p class="article-month">Feb</p>
+                    </div>
+                    <div class="article-img-frame">
+                        <img src="images/article-img5.png" alt="article-image" class="article-img">
+                    </div>
+                    <h3 class="article-heading">Amazing Blog Post</h3>
+                    <div class="article-info">
+                        <p class="article-author">by admin</p>
+                        <p class="article-comments">2 comment</p>
+                    </div>
+                </a>
             </article>
             <article class="news-article">
-                <div class="article-date">
-                    <p class="article-day">12</p>
-                    <p class="article-month">Feb</p>
-                </div>
-                <div class="article-img-frame">
-                    <img src="images/article-img7.png" alt="article-image" class="article-img">
-                </div>
-                <h3 class="article-heading">Amazing Blog Post</h3>
-                <div class="article-info">
-                    <p class="article-author">by admin</p>
-                    <p class="article-comments">2 comment</p>
-                </div>
+                <a href="#" class="news-article-link">
+                    <div class="article-date">
+                        <p class="article-day">12</p>
+                        <p class="article-month">Feb</p>
+                    </div>
+                    <div class="article-img-frame">
+                        <img src="images/article-img6.png" alt="article-image" class="article-img">
+                    </div>
+                    <h3 class="article-heading">Amazing Blog Post</h3>
+                    <div class="article-info">
+                        <p class="article-author">by admin</p>
+                        <p class="article-comments">2 comment</p>
+                    </div>
+                </a>
             </article>
             <article class="news-article">
-                <div class="article-date">
-                    <p class="article-day">12</p>
-                    <p class="article-month">Feb</p>
-                </div>
-                <div class="article-img-frame">
-                    <img src="images/article-img8.png" alt="article-image" class="article-img">
-                </div>
-                <h3 class="article-heading">Amazing Blog Post</h3>
-                <div class="article-info">
-                    <p class="article-author">by admin</p>
-                    <p class="article-comments">2 comment</p>
-                </div>
+                <a href="#" class="news-article-link">
+                    <div class="article-date">
+                        <p class="article-day">12</p>
+                        <p class="article-month">Feb</p>
+                    </div>
+                    <div class="article-img-frame">
+                        <img src="images/article-img7.png" alt="article-image" class="article-img">
+                    </div>
+                    <h3 class="article-heading">Amazing Blog Post</h3>
+                    <div class="article-info">
+                        <p class="article-author">by admin</p>
+                        <p class="article-comments">2 comment</p>
+                    </div>
+                </a>
+            </article>
+            <article class="news-article">
+                <a href="#" class="news-article-link">
+                    <div class="article-date">
+                        <p class="article-day">12</p>
+                        <p class="article-month">Feb</p>
+                    </div>
+                    <div class="article-img-frame">
+                        <img src="images/article-img8.png" alt="article-image" class="article-img">
+                    </div>
+                    <h3 class="article-heading">Amazing Blog Post</h3>
+                    <div class="article-info">
+                        <p class="article-author">by admin</p>
+                        <p class="article-comments">2 comment</p>
+                    </div>
+                </a>
             </article>
        </div>  
     </section>
@@ -504,20 +521,30 @@
         <div class="container">
             <h2 class="reviews-heading">What People Say About theHam</h2>
             <div class="reviews-dots-frame">
-                <img src="" alt="dots" class="reviews-dots-img">
+                <svg class="reviews-dots" xmlns="http://www.w3.org/2000/svg"     width="44" height="31" viewBox="0 0 44 31" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M9.65845 11.9026C14.9691 11.9026 19.2741 16.1757 19.2741 21.4484C19.2741 26.7195 14.9691 30.993 9.65845 30.993C4.34797 30.993 0.0429109 26.7195 0.0429109 21.4484L0 20.0841C0 9.54111 8.61007 0.993652 19.2312 0.993652V6.44727C15.562 6.44727 12.1124 7.86613 9.51792 10.4424C9.0185 10.9377 8.56269 11.466 8.15163 12.0211C8.64259 11.9451 9.14578 11.9026 9.65845 11.9026ZM34.3844 11.9026C39.6949 11.9026 43.9999 16.1757 43.9999 21.4484C43.9999 26.7195 39.6949 30.993 34.3844 30.993C29.0738 30.993 24.7687 26.7195 24.7687 21.4484L24.7258 20.0841C24.7258 9.54111 33.336 0.993652 43.957 0.993652V6.44727C40.2879 6.44727 36.8383 7.86613 34.2438 10.4424C33.7443 10.9377 33.2886 11.466 32.8774 12.0211C33.3685 11.9451 33.8715 11.9026 34.3844 11.9026Z" fill="#18CFAB"/>
+                </svg>
             </div>
             <div class="slider-for">
-                <div class="review-info">
+                <!-- <div class="review-info">
                     <p class="reviewer-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident accusamus soluta accusantium sed repudiandae asperiores, officia omnis, eius aperiam nesciunt temporibus dolores minima at consectetur. 1</p>
                     <p class="reviewer-name">Hasan Ali</p>
                     <p class="reviewer-position">UX Designer</p>
                     <div class="reviewer-photo-frame">
                         <img src="images/hasan-ali.png" alt="photo" class="reviewer-photo">
                     </div>
+                </div> -->
+                <div class="review-info">
+                    <p class="reviewer-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident accusamus soluta accusantium sed repudiandae asperiores, officia omnis, eius aperiam nesciunt temporibus dolores minima at consectetur. 2</p>
+                    <p class="reviewer-name">Maria Kravchuk</p>
+                    <p class="reviewer-position">Front-end developer</p>
+                    <div class="reviewer-photo-frame">
+                        <img src="images/maria.png" alt="photo" class="reviewer-photo">
+                    </div>
                 </div>
                 <div class="review-info">
                     <p class="reviewer-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident accusamus soluta accusantium sed repudiandae asperiores, officia omnis, eius aperiam nesciunt temporibus dolores minima at consectetur. 2</p>
-                    <p class="reviewer-name">Maria</p>
+                    <p class="reviewer-name">Maria Kravchuk</p>
                     <p class="reviewer-position">Front-end developer</p>
                     <div class="reviewer-photo-frame">
                         <img src="images/maria.png" alt="photo" class="reviewer-photo">
@@ -525,15 +552,15 @@
                 </div>
                 <div class="review-info">
                     <p class="reviewer-text">Lorem ipsum dolor, sit ameconsectetur adipisicing elit. Provident accusamusoluta accusantium sed repudiandae asperioresofficia omnis, eius aperiam nesciunt temporibudolores minima at consectetur. 3</p>
-                    <p class="reviewer-name">Maria</p>
+                    <p class="reviewer-name">Irina Melnik</p>
                     <p class="reviewer-position">JS developer</p>
                     <div class="reviewer-photo-frame">
-                        <img src="images/irina.png" alt="photoclass="reviewer-photo">
+                        <img src="images/irina.png" alt="photo" class="reviewer-photo">
                     </div>
                 </div>
                 <div class="review-info">
                     <p class="reviewer-text">Lorem ipsum dolor, sit ametconsectetur adipisicing elit. Provident accusamus solutaaccusantium sed repudiandae asperiores, officia omnis,eius aperiam nesciunt temporibus dolores minima atconsectetur. 4</p>
-                    <p class="reviewer-name">Maria</p>
+                    <p class="reviewer-name">Ivan Ivanov</p>
                     <p class="reviewer-position">Java developer</p>
                     <div class="reviewer-photo-frame">
                         <img src="images/ivan-ivanov.png" alt="photo"class="reviewer-photo">
@@ -541,8 +568,11 @@
                 </div>
             </div>
             <div class="slider-nav">
-                <div class="slider-reviewer-photo-frame">
+                <!-- <div class="slider-reviewer-photo-frame">
                     <img src="images/hasan-ali.png" alt="photo" class="slider-reviewer-photo">
+                </div> -->
+                <div class="slider-reviewer-photo-frame">
+                    <img src="images/maria.png" alt="photo" class="slider-reviewer-photo">
                 </div>
                 <div class="slider-reviewer-photo-frame">
                     <img src="images/maria.png" alt="photo" class="slider-reviewer-photo">
@@ -555,6 +585,12 @@
                 </div>
             </div>
         </div>
+        <button class="slick-prev-btn-custom">
+            <div class="prev-arrow-div"></div>
+        </button>
+        <button class="slick-next-btn-custom">
+            <div class="next-arrow-div"></div>
+        </button>
     </section>
     <footer class="footer">
         <div class="container">
@@ -565,6 +601,7 @@
         </div>
     </footer>
     <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="slick-1.8.1/slick/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
