step project draft1 (fixed)

--- a/index.html
+++ b/index.html
@@ -396,10 +396,13 @@
                     <div class="article-img-frame">
                         <img src="images/article-img1.png" alt="article-image" class="article-img">
                     </div>
-                    <h3 class="article-heading">Amazing Blog Post</h3>
-                    <div class="article-info">
-                        <p class="article-author">by admin</p>
-                        <p class="article-comments">2 comment</p>
+                    <div class="article-bottom">
+                        <h3 class="article-heading">Amazing Blog Post 
+                        </h3>
+                        <div class="article-info">
+                            <p class="article-author">by admin</        p>
+                            <p class="article-comments">2 comment</p>
+                        </div>
                     </div>
                 </a>
             </article>
@@ -410,28 +413,15 @@
                         <p class="article-month">Feb</p>
                     </div>
                     <div class="article-img-frame">
-                        <img src="images/article-img2.png" alt="article-image" class="article-img">
+                        <img src="images/article-img1.png" alt="article-image" class="article-img">
                     </div>
-                    <h3 class="article-heading">Amazing Blog Post</h3>
-                    <div class="article-info">
-                        <p class="article-author">by admin</p>
-                        <p class="article-comments">2 comment</p>
-                    </div>
-                </a>
-            </article>
-            <article class="news-article">
-                <a href="#" class="news-article-link">
-                    <div class="article-date">
-                        <p class="article-day">12</p>
-                        <p class="article-month">Feb</p>
-                    </div>
-                    <div class="article-img-frame">
-                        <img src="images/article-img3.png" alt="article-image" class="article-img">
-                    </div>
-                    <h3 class="article-heading">Amazing Blog Post</h3>
-                    <div class="article-info">
-                        <p class="article-author">by admin</p>
-                        <p class="article-comments">2 comment</p>
+                    <div class="article-bottom">
+                        <h3 class="article-heading">Amazing Blog Post 
+                        </h3>
+                        <div class="article-info">
+                            <p class="article-author">by admin</        p>
+                            <p class="article-comments">2 comment</p>
+                        </div>
                     </div>
                 </a>
             </article>
@@ -442,28 +432,15 @@
                         <p class="article-month">Feb</p>
                     </div>
                     <div class="article-img-frame">
-                        <img src="images/article-img4.png" alt="article-image" class="article-img">
+                        <img src="images/article-img1.png" alt="article-image" class="article-img">
                     </div>
-                    <h3 class="article-heading">Amazing Blog Post</h3>
-                    <div class="article-info">
-                        <p class="article-author">by admin</p>
-                        <p class="article-comments">2 comment</p>
-                    </div>
-                </a>
-            </article>
-            <article class="news-article">
-                <a href="#" class="news-article-link">
-                    <div class="article-date">
-                        <p class="article-day">12</p>
-                        <p class="article-month">Feb</p>
-                    </div>
-                    <div class="article-img-frame">
-                        <img src="images/article-img5.png" alt="article-image" class="article-img">
-                    </div>
-                    <h3 class="article-heading">Amazing Blog Post</h3>
-                    <div class="article-info">
-                        <p class="article-author">by admin</p>
-                        <p class="article-comments">2 comment</p>
+                    <div class="article-bottom">
+                        <h3 class="article-heading">Amazing Blog Post 
+                        </h3>
+                        <div class="article-info">
+                            <p class="article-author">by admin</        p>
+                            <p class="article-comments">2 comment</p>
+                        </div>
                     </div>
                 </a>
             </article>
@@ -474,28 +451,15 @@
                         <p class="article-month">Feb</p>
                     </div>
                     <div class="article-img-frame">
-                        <img src="images/article-img6.png" alt="article-image" class="article-img">
+                        <img src="images/article-img1.png" alt="article-image" class="article-img">
                     </div>
-                    <h3 class="article-heading">Amazing Blog Post</h3>
-                    <div class="article-info">
-                        <p class="article-author">by admin</p>
-                        <p class="article-comments">2 comment</p>
-                    </div>
-                </a>
-            </article>
-            <article class="news-article">
-                <a href="#" class="news-article-link">
-                    <div class="article-date">
-                        <p class="article-day">12</p>
-                        <p class="article-month">Feb</p>
-                    </div>
-                    <div class="article-img-frame">
-                        <img src="images/article-img7.png" alt="article-image" class="article-img">
-                    </div>
-                    <h3 class="article-heading">Amazing Blog Post</h3>
-                    <div class="article-info">
-                        <p class="article-author">by admin</p>
-                        <p class="article-comments">2 comment</p>
+                    <div class="article-bottom">
+                        <h3 class="article-heading">Amazing Blog Post 
+                        </h3>
+                        <div class="article-info">
+                            <p class="article-author">by admin</        p>
+                            <p class="article-comments">2 comment</p>
+                        </div>
                     </div>
                 </a>
             </article>
@@ -506,12 +470,72 @@
                         <p class="article-month">Feb</p>
                     </div>
                     <div class="article-img-frame">
-                        <img src="images/article-img8.png" alt="article-image" class="article-img">
+                        <img src="images/article-img1.png" alt="article-image" class="article-img">
                     </div>
-                    <h3 class="article-heading">Amazing Blog Post</h3>
-                    <div class="article-info">
-                        <p class="article-author">by admin</p>
-                        <p class="article-comments">2 comment</p>
+                    <div class="article-bottom">
+                        <h3 class="article-heading">Amazing Blog Post 
+                        </h3>
+                        <div class="article-info">
+                            <p class="article-author">by admin</        p>
+                            <p class="article-comments">2 comment</p>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article class="news-article">
+                <a href="#" class="news-article-link">
+                    <div class="article-date">
+                        <p class="article-day">12</p>
+                        <p class="article-month">Feb</p>
+                    </div>
+                    <div class="article-img-frame">
+                        <img src="images/article-img1.png" alt="article-image" class="article-img">
+                    </div>
+                    <div class="article-bottom">
+                        <h3 class="article-heading">Amazing Blog Post 
+                        </h3>
+                        <div class="article-info">
+                            <p class="article-author">by admin</        p>
+                            <p class="article-comments">2 comment</p>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article class="news-article">
+                <a href="#" class="news-article-link">
+                    <div class="article-date">
+                        <p class="article-day">12</p>
+                        <p class="article-month">Feb</p>
+                    </div>
+                    <div class="article-img-frame">
+                        <img src="images/article-img1.png" alt="article-image" class="article-img">
+                    </div>
+                    <div class="article-bottom">
+                        <h3 class="article-heading">Amazing Blog Post 
+                        </h3>
+                        <div class="article-info">
+                            <p class="article-author">by admin</        p>
+                            <p class="article-comments">2 comment</p>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article class="news-article">
+                <a href="#" class="news-article-link">
+                    <div class="article-date">
+                        <p class="article-day">12</p>
+                        <p class="article-month">Feb</p>
+                    </div>
+                    <div class="article-img-frame">
+                        <img src="images/article-img1.png" alt="article-image" class="article-img">
+                    </div>
+                    <div class="article-bottom">
+                        <h3 class="article-heading">Amazing Blog Post 
+                        </h3>
+                        <div class="article-info">
+                            <p class="article-author">by admin</        p>
+                            <p class="article-comments">2 comment</p>
+                        </div>
                     </div>
                 </a>
             </article>
