reviews section fixed except overflow-y

--- a/index.html
+++ b/index.html
@@ -591,30 +591,30 @@
                     </div>
                 </div>
             </div>
-            <div class="slider-nav">
-                <!-- <div class="slider-reviewer-photo-frame">
-                    <img src="images/hasan-ali.png" alt="photo" class="slider-reviewer-photo">
-                </div> -->
-                <div class="slider-reviewer-photo-frame">
-                    <img src="images/maria.png" alt="photo" class="slider-reviewer-photo">
+            <div class="slider-nav-frame">
+                <div class="slider-nav">
+                    <div class="slider-reviewer-photo-frame">
+                        <img src="images/maria.png" alt="photo" class="slider-reviewer-photo">
+                    </div>
+                    <div class="slider-reviewer-photo-frame">
+                        <img src="images/maria.png" alt="photo" class="slider-reviewer-photo">
+                    </div>
+                    <div class="slider-reviewer-photo-frame">
+                        <img src="images/irina.png" alt="photo" class="slider-reviewer-photo">
+                    </div>
+                    <div class="slider-reviewer-photo-frame">
+                        <img src="images/ivan-ivanov.png" alt="photo" class="slider-reviewer-photo">
+                    </div>
                 </div>
-                <div class="slider-reviewer-photo-frame">
-                    <img src="images/maria.png" alt="photo" class="slider-reviewer-photo">
-                </div>
-                <div class="slider-reviewer-photo-frame">
-                    <img src="images/irina.png" alt="photo" class="slider-reviewer-photo">
-                </div>
-                <div class="slider-reviewer-photo-frame">
-                    <img src="images/ivan-ivanov.png" alt="photo" class="slider-reviewer-photo">
-                </div>
+                <button class="slick-prev-btn-custom">
+                    <div class="prev-arrow-div"></div>
+                </button>
+                <button class="slick-next-btn-custom">
+                    <div class="next-arrow-div"></div>
+                </button>
+                
             </div>
         </div>
-        <button class="slick-prev-btn-custom">
-            <div class="prev-arrow-div"></div>
-        </button>
-        <button class="slick-next-btn-custom">
-            <div class="next-arrow-div"></div>
-        </button>
     </section>
     <footer class="footer">
         <div class="container">
